@@ -2,7 +2,7 @@ verbose = 9
 profile-strictness = quiet
 
 [Documentation::PodSpelling]
-stop_words = ActiveKids AutoCommit CachedKids ChildHandles ChopBlanks CompatMode CursorName DBD DBI Datatype dbdpg ErrCount FetchHashKeyName HandleError HandleSetErr InactiveDestroy LongReadLen LongTruncOk Mergl Momjian Mullane NULLABLE OID PgBouncer PGEND PGERROR PGLIBPQ PGLOGIN PGNOPREFIX PGPREFIX PGQUOTE PGSTART PGWARN Postgres PostgreSQL PrintError PrintWarn README RaiseError RowCache RowCacheSize SQL SQLSTATE SSL STDIN STDERR STDOUT Sabino Savepoints ShowErrorStatement TaintIn TaintOut TraceLevel UTF Username afterwards arrayrefs attr autocommit backend bitmask cancelled datatype dbd dbh errstr fd filename getfd getline largeobject len libpq pgbuiltin pgsql runtime savepoint savepoints schemas sslmode tablename tablespace tablespaces typename username varchar
+stop_words = ActiveKids AutoCommit CachedKids ChildHandles ChopBlanks CompatMode CursorName DBD DBI Datatype dbdpg ErrCount FetchHashKeyName HandleError HandleSetErr InactiveDestroy LongReadLen LongTruncOk Mergl Momjian Mullane NULLABLE OID PgBouncer pgend pglibpq pglogin pgprefix pgquote pgstart Postgres PostgreSQL PrintError PrintWarn README RaiseError RowCache RowCacheSize SQL SQLSTATE SSL STDIN STDERR STDOUT Sabino Savepoints ShowErrorStatement TaintIn TaintOut TraceLevel UTF Username afterwards arrayrefs attr autocommit backend bitmask cancelled datatype dbd dbh errstr fd filename getfd getline largeobject len libpq pgbuiltin pgsql runtime savepoint savepoints schemas sslmode tablename tablespace tablespaces typename username varchar
 
 [-Bangs::ProhibitCommentedOutCode]
 [-Bangs::ProhibitFlagComments]
